--- a/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
@@ -30,6 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="biz.dfch.CS.StateMachine">
+      <HintPath>..\packages\biz.dfch.CS.StateMachine.1.0.0.0\lib\net45\biz.dfch.CS.StateMachine.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +48,9 @@
   <ItemGroup>
     <Compile Include="AClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
