--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/biz.dfch.CS.Entity.LifeCycleManager.Tests.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/biz.dfch.CS.Entity.LifeCycleManager.Tests.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\biz.dfch.CS.Entity.LifeCycleManager\biz.dfch.CS.Entity.LifeCycleManager.csproj">
+      <Project>{669d4224-17cc-4fb2-868d-665c9edce858}</Project>
+      <Name>biz.dfch.CS.Entity.LifeCycleManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
