unity xml configuration added

--- a/src/biz.dfch.CS.Entity.LifeCycleManager/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/App.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
+  </configSections>
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <container>
+      <register type="biz.dfch.CS.Entity.LifeCycleManager.Contracts.IStateMachineConfigLoader, biz.dfch.CS.Entity.LifeCycleManager.Contracts" mapTo="LifeCycleManager.Extensions.Default.Loaders.DefaultStateMachineConfigLoader, LifeCycleManager.Extensions.Default" />
+    </container>
+  </unity>
   <appSettings>
-    <!-- DFTODO add settings -->
     <add key="x" value="x" />
-    <add key="y" value="y" />
   </appSettings>
 </configuration>
