--- a/src/LifeCycleManager.Extensions.Default.Tests/App.config
+++ b/src/LifeCycleManager.Extensions.Default.Tests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key ="AnEntity" value="{&quot;Created-Continue&quot;:&quot;Running&quot;,&quot;Created-Cancel&quot;:&quot;InternalErrorState&quot;,&quot;Running-Continue&quot;:&quot;Completed&quot;,&quot;Running-Cancel&quot;:&quot;Cancelled&quot;,&quot;Completed-Continue&quot;:&quot;Disposed&quot;,&quot;Completed-Cancel&quot;:&quot;InternalErrorState&quot;,&quot;Cancelled-Continue&quot;:&quot;Disposed&quot;,&quot;Cancelled-Cancel&quot;:&quot;InternalErrorState&quot;,&quot;InternalErrorState-Continue&quot;:&quot;Disposed&quot;}"/>
+    <add key ="EntityType" value="{&quot;Created-Continue&quot;:&quot;Running&quot;,&quot;Created-Cancel&quot;:&quot;InternalErrorState&quot;,&quot;Running-Continue&quot;:&quot;Completed&quot;,&quot;Running-Cancel&quot;:&quot;Cancelled&quot;,&quot;Completed-Continue&quot;:&quot;Disposed&quot;,&quot;Completed-Cancel&quot;:&quot;InternalErrorState&quot;,&quot;Cancelled-Continue&quot;:&quot;Disposed&quot;,&quot;Cancelled-Cancel&quot;:&quot;InternalErrorState&quot;,&quot;InternalErrorState-Continue&quot;:&quot;Disposed&quot;}"/>
   </appSettings>
 </configuration>
