factory skeleton added

--- a/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\JobContext.cs" />
+    <Compile Include="LifeCycleManagerFactory.cs" />
     <Compile Include="Loader\DefaultCalloutDefinitionLoader.cs" />
     <Compile Include="LifeCycleManager.cs" />
     <Compile Include="Model\Job.cs" />
