--- a/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
@@ -58,9 +58,9 @@
     <Compile Include="Context\JobContext.cs" />
     <Compile Include="Credentials\ICredentialProvider.cs" />
     <Compile Include="LifeCycleManagerFactory.cs" />
-    <Compile Include="Loader\DefaultCalloutDefinitionLoader.cs" />
     <Compile Include="LifeCycleManager.cs" />
     <Compile Include="Controller\EntityController.cs" />
+    <Compile Include="Loader\CalloutDefinitionLoader.cs" />
     <Compile Include="Model\Job.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
