--- a/src/biz.dfch.CS.Entity.LifeCycleManager/packages.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="biz.dfch.CS.StateMachine" version="1.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
 </packages>
