--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Contracts/biz.dfch.CS.Entity.LifeCycleManager.Contracts.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Contracts/biz.dfch.CS.Entity.LifeCycleManager.Contracts.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity\CalloutData.cs" />
     <Compile Include="Executors\ICalloutExecutor.cs" />
     <Compile Include="Executors\ICalloutExecutorData.cs" />
     <Compile Include="Loaders\IStateMachineConfigLoader.cs" />
