Initialization of LifecycleManager changed; part of jobsController implemented

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/biz.dfch.CS.Entity.LifeCycleManager.Tests.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/biz.dfch.CS.Entity.LifeCycleManager.Tests.csproj
@@ -70,6 +70,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Controller\EntityControllerTest.cs" />
+    <Compile Include="Controller\JobsControllerTest.cs" />
     <Compile Include="LifeCycleManagerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
