--- a/src/biz.dfch.CS.Entity.LifeCycleManager/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="LifeCycleManager.ExtensionsFolder" value="..\..\LifecycleManager.Extensions.Default\bin\Debug" />
+    <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
   </appSettings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -17,4 +17,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
