--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Contracts/biz.dfch.CS.Entity.LifeCycleManager.Contracts.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Contracts/biz.dfch.CS.Entity.LifeCycleManager.Contracts.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Data.Edm, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Endpoint\IODataEndpoint.cs" />
+    <Compile Include="Endpoint\IODataEndpointData.cs" />
+    <Compile Include="Endpoint\ServerRole.cs" />
     <Compile Include="Entity\CalloutData.cs" />
     <Compile Include="Executors\ICalloutExecutor.cs" />
     <Compile Include="Executors\ICalloutExecutorData.cs" />
