--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <appSettings>
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
-    <add key="Cumulus.ODataExtensions.Container.Name" value="Core" />
+    <add key="Core.Container.Name" value="Core" />
   </appSettings>
   <log4net>
     <!-- Define some output appenders -->
