--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/biz.dfch.CS.Entity.LifeCycleManager.Tests.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/biz.dfch.CS.Entity.LifeCycleManager.Tests.csproj
@@ -101,6 +101,7 @@
   <ItemGroup>
     <Compile Include="Controller\BaseControllerTest.cs" />
     <Compile Include="Controller\CallbacksControllerTest.cs" />
+    <Compile Include="Controller\CalloutDefinitionsControllerTest.cs" />
     <Compile Include="Controller\EntityControllerTest.cs" />
     <Compile Include="Controller\JobsControllerTest.cs" />
     <Compile Include="Controller\StateChangeLocksControllerTest.cs" />
