finished implementation of LifeCyclesController including tests; updated service reference

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
@@ -8,6 +8,7 @@
   <appSettings>
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="Core.Container.Name" value="Core" />
+    <add key="Core.Endpoint" value="http://localhost:51719/api/Core.svc"/>
   </appSettings>
   <log4net>
     <!-- Define some output appenders -->
