--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -16,6 +16,7 @@
     <add key="LifeCycleManager.Extensions" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="Core.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
     <add key="Core.Container.Name" value="Core" />
+    <add key="Core.Endpoint" value="http://localhost:51719/api/Core.svc"/>
     <add key="ServerRoles" value="HOST"/>
   </appSettings>
   <system.web>
