--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Contracts/biz.dfch.CS.Entity.LifeCycleManager.Contracts.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Contracts/biz.dfch.CS.Entity.LifeCycleManager.Contracts.csproj
@@ -34,6 +34,7 @@
       <HintPath>..\packages\Microsoft.Data.Edm.5.6.0\lib\net40\Microsoft.Data.Edm.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,6 +46,7 @@
     <Compile Include="Endpoint\IODataEndpoint.cs" />
     <Compile Include="Endpoint\IODataEndpointData.cs" />
     <Compile Include="Endpoint\ServerRole.cs" />
+    <Compile Include="Entity\BaseEntity.cs" />
     <Compile Include="Entity\CalloutData.cs" />
     <Compile Include="Executors\ICalloutExecutor.cs" />
     <Compile Include="Executors\ICalloutExecutorData.cs" />
