set service reference credentials according configuration values

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -17,6 +17,8 @@
     <add key="Core.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
     <add key="Core.Container.Name" value="Core" />
     <add key="Core.Endpoint" value="http://localhost:51719/api/Core.svc"/>
+    <add key="Core.Service.User" value="user"/>
+    <add key="Core.Service.Password" value="password"/>
     <add key="ServerRoles" value="HOST"/>
   </appSettings>
   <system.web>
