--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
@@ -9,6 +9,8 @@
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="Core.Container.Name" value="Core" />
     <add key="Core.Endpoint" value="http://test/api/Core.svc"/>
+    <add key="Core.Service.User" value="user"/>
+    <add key="Core.Service.Password" value="password"/>
   </appSettings>
   <log4net>
     <!-- Define some output appenders -->
